Adding project content

--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,7 +1,7 @@
 {{ partial "header" .}}
 
 <h1>{{ .Title }}</h1>
-{{ partial "post/information" . }}
+<!-- {{ partial "post/information" . }} -->
 
 {{ .Content }}
 
