add: resource page for creating hugo sites

--- a/public/classes/template/index.html
+++ b/public/classes/template/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/images/levelup.png" type="image/x-icon" />
   
 
-  <meta name="generator" content="Hugo 0.109.0">
+  <meta name="generator" content="Hugo 0.68.3" />
 
   
 
@@ -19,20 +19,22 @@
 
 
 
-<link rel="stylesheet" href="https://example.com/sass/style.min.eabe1aa4bd266a15f7b39b122bd6a5cc75cb067e5373631ac21d7815d6240d6f.css" integrity="sha256-6r4apL0mahX3s5sSK9alzHXLBn5Tc2Mawh14FdYkDW8=" media="screen">
+<link rel="stylesheet" href="https://example.com/sass/style.min.2b2ded605b9bab9c355d6551df0997d50ac3d0eb1e885d3221bbaf66414f72cf.css" integrity="sha256-Ky3tYFubq5w1XWVR3wmX1QrD0OseiF0yIbuvZkFPcs8=" media="screen">
 <link rel="stylesheet" href="https://example.com/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:title" content="" />
 <meta property="og:description" content="Academic Bulletin Description The Lab: Discord class server: Meeting Information: Classes: Labs: Office Hours: Syllabus: Planning your time TextBook: Other Useful Textbooks: classDocs/ Repository Gradebook Repository " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://example.com/classes/template/" /><meta property="article:section" content="classes" />
-
+<meta property="og:url" content="https://example.com/classes/template/" />
 
 
   <meta itemprop="name" content="">
 <meta itemprop="description" content="Academic Bulletin Description The Lab: Discord class server: Meeting Information: Classes: Labs: Office Hours: Syllabus: Planning your time TextBook: Other Useful Textbooks: classDocs/ Repository Gradebook Repository ">
 
 <meta itemprop="wordCount" content="26">
+
+
+
 <meta itemprop="keywords" content="" />
 </head>
 <body>
@@ -43,7 +45,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://example.com/images/dunno.jpg' alt="Profile Faculty Talk" class="rounded-logo">
+        <img src='https://example.com/images/dunno.jpg' alt="Profile Bioinformatics" class="rounded-logo">
       </a>
     </div>
     <h2>I, Oliver Bonham-Carter 👋</h2>
@@ -149,7 +151,7 @@
     <div class="intro">
       <div class="logo-container">
         <a href="/">
-          <img src='https://example.com/images/dunno.jpg' alt="Profile Faculty Talk" class="rounded-logo">
+          <img src='https://example.com/images/dunno.jpg' alt="Profile Bioinformatics" class="rounded-logo">
         </a>
       </div>
       <h2>I, Oliver Bonham-Carter 👋</h2>
@@ -295,7 +297,7 @@
   </div>
   <footer>
     <div class="footer-wrapper">
-      <p>OBC says: Made with ❤️ &mdash; Powered by <a href="https://gohugo.io/" target="_blank" rel="external">Hugo</a> and the <a href="https://github.com/bjacquemet/personal-web" target='_blank' rel="external">Personal Web</a> theme. Icons come from the great <a href="https://fontawesome.com/license" target="_blank" rel="external">Font Awesome </a> library</p>
+      <p>OBC says: Made with ❤ &mdash; Powered by <a href="https://gohugo.io/" target="_blank" rel="external">Hugo</a> and the <a href="https://github.com/bjacquemet/personal-web" target='_blank' rel="external">Personal Web</a> theme. Icons come from the great <a href="https://fontawesome.com/license" target="_blank" rel="external">Font Awesome </a> library</p>
       <p>© Oliver Bonham-Carter</p>
       <p>    <figcaption></figcaption>
         <p>
