fix: update files

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,13 +10,13 @@
           &#x200B;
           </center>
           </p>
-        <audio
+        <!-- <audio
             controls
             src="/sound/airhorn.mp3">
                 <a href="/sound/airhorn.mp3">
                     Download audio
                 </a>
-        </audio>
+        </audio> -->
     </figure>
     </p>
     </div>
